--- a/index.html
+++ b/index.html
@@ -12,19 +12,30 @@
 </head>
 <body>
     <img id="logo" src="Assets/images/BTTFlogo2.jpg"/>
+
    
     <div class ="container quiz">
         <h1>trivia game</h1>
-        <div id="timer"></div>
-        <div id="question">Welcome to the Back to the Future trivia game!</div>
-        <div id="1">Click "New Game" to text your Back to the future knowledge.</div>
-        <div id="2"></div>
-        <div id="3">You'll have 15 seconds to answer each question.</div>
-        <div id="4">Let's get started!</div>
-        <div class="ans-buttons hidden">
-            <button class="response" value="A">A</button><button class="response" value="B">B</button><button class="response" value="C">C</button><button class="response" value="D">D</button>
-        </div>
-        <button id="newgame">New Game</button>
+            <div class="row">
+                <div class="col-6">
+                    
+                    <div id="timer"></div>
+                    <div id="question">Welcome to the Back to the Future trivia game!</div>
+                    <div id="1">Click "New Game" to test your Back to the future knowledge.</div>
+                    <div id="2"></div>
+                    <div id="3">You'll have 15 seconds to answer each question.</div>
+                    <div id="4">Let's get started!</div>
+                    <div class="ans-buttons hidden">
+                            <button class="response" value="A">A</button><button class="response" value="B">B</button><button class="response" value="C">C</button><button class="response" value="D">D</button>
+                    </div>
+                    <button id="newgame">new game</button>
+                </div>
+
+                <div class="col-6">
+                    <div id="quizpic"></div>
+                </div>
+            </div>
+
     </div>
 
    
