--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="https://code.jquery.com/jquery.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Chakra+Petch|Libre+Franklin|Muli|PT+Sans+Narrow|Titillium+Web" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="Assets/CSS/reset.css">
     <link rel="stylesheet" type="text/css" href="Assets/CSS/style.css">
 
     <title>Back to the Future Trivia</title>
 </head>
 <body>
     <img id="logo" src="Assets/images/BTTFlogo2.jpg"/>
-
    
     <div class ="container quiz">
         <h1>trivia game</h1>
             <div class="row">
-                <div class="col-6">
-                    
+                <div class="col-6">                    
                     <div id="timer"></div>
                     <div id="question">Welcome to the Back to the Future trivia game!</div>
                     <div id="1">Click "New Game" to test your Back to the future knowledge.</div>
@@ -26,18 +26,16 @@
                     <div id="3">You'll have 15 seconds to answer each question.</div>
                     <div id="4">Let's get started!</div>
                     <div class="ans-buttons hidden">
-                            <button class="response" value="A">A</button><button class="response" value="B">B</button><button class="response" value="C">C</button><button class="response" value="D">D</button>
+                        <button class="response" value="A">A</button><button class="response" value="B">B</button><button class="response" value="C">C</button><button class="response" value="D">D</button>
                     </div>
                     <button id="newgame">new game</button>
                 </div>
-
                 <div class="col-6">
                     <div id="quizpic"></div>
                 </div>
             </div>
 
     </div>
-
    
     <script src="Assets/JS/script.js"></script>
 </body>
