--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class ="container quiz">
         <h1>trivia game</h1>
             <div class="row">
-                <div class="col-6">                    
+                <div class="col-12 col-md-6 order-2 order-md-1">                    
                     <div id="timer"></div>
                     <div id="question">Welcome to the Back to the Future trivia game!</div>
                     <div id="1">Click "New Game" to test your Back to the future knowledge.</div>
@@ -30,7 +30,7 @@
                     </div>
                     <button id="newgame">new game</button>
                 </div>
-                <div class="col-6">
+                <div class="col-12 col-md-6 order-1 order-md-2">
                     <div id="quizpic"></div>
                 </div>
             </div>
